# LGFX_Simulator_SDL

./: .gitignore  CMakeLists.txt  LGFX_SDL.cpp  main.cpp
user/: CMakeLists.txt  performance_window.hpp  simu_project.cpp
user/hal/: hal.cpp  hal.h
user/hal/hal_core2/: hal_core2.hpp
user/hal/hal_simulator/: hal_simulator.hpp
